# rustybridge

./: .gitignore  AGENTS.md  BREAKSEQUENCE.md  Cargo.toml  FIX.md  FORWARDING.md  README.md  SERVER_TODO.md  STYLE_GUIDE.md  TODO_CLIENT.md  VULNERABILITIES.md  clean-and-check.sh  depcheck.sh  run_web.sh  rustfmt.toml  tomlfmt.toml  wip_genie_effect.html
crates/client-core/: Cargo.toml  README.md
crates/client-core/src/: auth.rs  error.rs  hostkeys.rs  lib.rs
crates/client-core/tests/: forwarding.rs
crates/rb-cli/: Cargo.toml  README.md
crates/rb-cli/src/: client_cli.rs  lib.rs  server_cli.rs  tui_input.rs
crates/rb-cli/tests/: client_cli.rs
crates/rb-types/: Cargo.toml
crates/rb-types/src/: access.rs  auth.rs  client.rs  config.rs  credentials.rs  lib.rs  net.rs  relay.rs  ssh.rs  state.rs  tasks.rs  users.rs  validation.rs  validation_tests.rs  web.rs
crates/rb-types/src/audit/: category.rs  context.rs  event.rs  filter.rs  log_hint.rs  mod.rs  recorded.rs  retention.rs
crates/rb-types/src/auth/: claims.rs  claims_tests.rs  mod.rs  oidc.rs  ssh.rs
crates/rb-web/: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.css
crates/rb-web/public/xterm/: xterm-init.js
crates/rb-web/src/: app_root.rs  bindings.rs  error.rs  lib.rs  main.rs
crates/rb-web/src/app/: logging.rs  mod.rs  models.rs  routes.rs  server_status.rs  session.rs  storage.rs  utils.rs
crates/rb-web/src/app/api/: access.rs  audit.rs  auth.rs  credentials.rs  groups.rs  mod.rs  relay_list.rs  relay_session_timeline.rs  relays.rs  roles.rs  sessions.rs  settings.rs  ssh_keys.rs  ssh_websocket.rs  tasks.rs  users.rs
crates/rb-web/src/app/auth/: context.rs  hooks.rs  mod.rs  oidc.rs
crates/rb-web/src/app/components/: avatar_dropdown.rs  credential_badge.rs  credential_form.rs  fab.rs  footer.rs  grouped_events.rs  layout.rs  mod.rs  modal.rs  multi_fab.rs  navbar.rs  page_refresh.rs  relay_access_form.rs  relay_drawer.rs  relay_session_timeline.rs  session_player.rs  (+7 more)
crates/rb-web/src/server/: config.rs  mod.rs  relay_list.rs  ssh_websocket.rs
crates/server-core/: Cargo.toml  README.md
crates/server-core/src/: api.rs  audit.rs  auth.rs  context.rs  credential.rs  error.rs  group.rs  handler.rs  lib.rs  logging.rs  macros.rs  relay.rs  relay_host.rs  remote_backend.rs  retention.rs  role.rs  scheduler.rs  secrets.rs  secrets.test.rs  server_manager.rs  session_recorder.rs  session_recorder_tests.rs  sessions.rs  sessions.test.rs  ssh_server.rs  startup_cleanup.rs  tui.rs  user.rs
crates/server-core/src/audit/: logger.rs  mod.rs  query.rs
crates/server-core/src/auth/: oidc.rs  ssh_auth.rs  ssh_cert.rs
crates/server-core/src/credential/: mod.rs
crates/server-core/src/group/: mod.rs
crates/server-core/src/handler/: actions.rs  auth.rs  input.rs  mod.rs  relay.rs  session.rs
crates/server-core/src/relay/: auth.rs  connection.rs  connection.test.rs  connection_tests.rs  credential.rs  handler.rs  mod.rs
crates/server-core/src/relay_host/: access.rs  management.rs  options.rs
crates/server-core/src/role/: mod.rs
crates/server-core/src/scheduler/: executor.rs  manager.rs  registry.rs  tests.rs
crates/server-core/src/sessions/: session_backend.rs  session_backend.test.rs  web.rs
crates/server-core/src/ssh_server/: mod.rs
crates/server-core/src/tui/: mod.rs
crates/server-core/src/user/: mod.rs
crates/server-core/tests/: agent_credential.rs  credentials.rs  creds_assignment_encryption.rs  option_encryption.rs  rotation.rs  rotation_b64.rs  rotation_whitespace.rs  secrets.rs  secrets_misc.rs  session_backend.rs  ssh_key_credential.rs  user_public_keys.rs
crates/server-core/tests/common/: mod.rs
crates/ssh-core/: Cargo.toml  README.md
crates/ssh-core/src/: crypto.rs  error.rs  forwarding.rs  keys.rs  lib.rs  logging.rs  session.rs  terminal.rs
crates/ssh-core/src/forwarding/: local.rs  manager.rs  manager_tests.rs  mod.rs  parsing.rs  parsing_tests.rs  remote.rs  socks.rs  traits.rs
crates/ssh-core/src/session/: mod.rs  shell.rs  shell_tests.rs  subsystem.rs
crates/ssh-core/tests/: forwarding.rs  keys_legacy_pem.rs  subsystem.rs
crates/state-store/: Cargo.toml  README.md
crates/state-store/migrations/audit/: 20251203000000_init_audit.sql  20251203010000_add_metadata.sql  20251203020000_remove_fk_constraint.sql  20251204000000_add_timing_markers.sql  20251205000000_enhance_system_events.sql  20251206000000_link_sessions_to_connections.sql  20251206010000_refactor_session_schema.sql  20251207010000_add_parent_session_id.sql  20251207020000_audit_parent_session.sql
crates/state-store/migrations/client/: 20251114015642_client_hostkeys.sql
crates/state-store/migrations/server/: 20251114015642_server_options.sql  20251114020000_relay_hosts.sql  20251118000000_relay_acl.sql  20251118001000_users.sql  20251118002000_users_password.sql  20251118003000_credentials.sql  20251121000000_add_is_secure_to_options.sql  20251121010000_acl_principals.sql  20251122120000_auth_rbac.sql  20251122130000_group_claims.sql  20251124000000_credential_flexibility.sql  20251124223000_oidc_and_ssh_keys.sql  20251125120000_oidc_profile.sql  20251125130000_bind_ssh_session_to_user.sql  20251126000000_group_roles.sql  20251201000000_add_name_indexes.sql  20251201020000_add_server_claim.sql  20251201100000_acl_use_ids.sql  20251202000000_add_junction_pks.sql  20251202100000_ensure_name_uniqueness.sql  20251202143500_add_server_attach_any_claim.sql
crates/state-store/src/: audit.rs  audit_tests.rs  auth.rs  config.rs  credentials.rs  db.rs  error.rs  lib.rs  rbac.rs  rbac_tests.rs  relay.rs  ssh_keys.rs  test_support.rs  tests_rbac.rs  users.rs
crates/state-store/src/audit/: connections.rs  events.rs  mod.rs  retention.rs  tests.rs
crates/state-store/src/auth/: mod.rs
crates/state-store/src/config/: mod.rs
crates/state-store/src/credentials/: mod.rs
crates/state-store/src/db/: mod.rs
crates/state-store/src/rbac/: mod.rs
crates/state-store/src/relay/: mod.rs
crates/state-store/src/ssh_keys/: mod.rs
crates/state-store/src/users/: mod.rs
(+168 files in other folders)
