[package]
name = "client-core"
version.workspace = true
edition.workspace = true

[features]
forwarding-tests = []

[dependencies]
russh.workspace = true
sqlx.workspace = true
ssh-core = { path = "../ssh-core" }
state-store = { path = "../state-store" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ssh-key.workspace = true
rpassword.workspace = true
secrecy.workspace = true

[dev-dependencies]
async-trait.workspace = true
