[package]
name = "client-core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
forwarding-tests = []

[dependencies]
russh.workspace = true
sqlx.workspace = true
ssh-core = { path = "../ssh-core" }
state-store = { path = "../state-store" }
rb-types = { path = "../rb-types", features = ["secrecy", "clap"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ssh-key.workspace = true
rpassword.workspace = true
secrecy.workspace = true

[dev-dependencies]
async-trait.workspace = true
