[package]
name = "client-core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
forwarding-tests = []

[dependencies]
rb-types = { path = "../rb-types", features = ["secrecy", "clap"] }
rpassword.workspace = true
russh.workspace = true
secrecy.workspace = true
sqlx.workspace = true
ssh-core = { path = "../ssh-core" }
state-store = { path = "../state-store" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["test-util"] }
