[package]
name = "rb-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
client-core = { path = "../client-core" }
rpassword.workspace = true
ssh-core = { path = "../ssh-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
whoami.workspace = true
server-core = { path = "../server-core" }
secrecy.workspace = true
tui-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
rb-types = { path = "../rb-types" }
state-store = { path = "../state-store" }
rb-web = { path = "../rb-web", features = ["server"] }

[dev-dependencies]
serial_test = "3"
