[package]
name = "rb-cli"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
client-core = { path = "../client-core" }
rpassword.workspace = true
ssh-core = { path = "../ssh-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
whoami.workspace = true
server-core = { path = "../server-core" }
secrecy.workspace = true
tui-core.workspace = true
ratatui.workspace = true
crossterm.workspace = true
rb-types = { path = "../rb-types" }
rb-web = { path = "../rb-web", features = ["server"] }
tracing-panic.workspace = true

[dev-dependencies]
