[package]
name = "rb-types"
version = "0.1.0"
edition = "2021"

[features]
sqlx = ["dep:sqlx"]
secrecy = ["dep:secrecy"]
clap = ["dep:clap"]
openidconnect = ["dep:openidconnect"]
ssh-key = ["dep:ssh-key"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, default-features = false, features = [
    "macros",
], optional = true }
secrecy = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }
ssh-key = { workspace = true, optional = true }
