[package]
name = "rb-types"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
sqlx = ["dep:sqlx"]
secrecy = ["dep:secrecy"]
clap = ["dep:clap"]
openidconnect = ["dep:openidconnect"]
ssh-key = ["dep:ssh-key"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, optional = true }
derive_more = { workspace = true }
openidconnect = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
    "macros",
], optional = true }
ssh-key = { workspace = true, optional = true }
strum.workspace = true
thiserror = { workspace = true }
uuid.workspace = true

[dev-dependencies]
strum_macros.workspace = true
