[package]
name = "rb-web"
version.workspace = true
edition.workspace = true
publish = false

[lib]
doctest = false

[features]
default = ["server"]
web = [
    "dioxus/web",
    "web-sys",
    "futures",
    "tracing-web",
    "tracing-subscriber",
    "console_error_panic_hook",
    "gloo-timers",
    "gloo-events",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
]
server = [
    "anyhow",
    "tokio",
    "axum",
    "tower",
    "dioxus/server",
    "dioxus/router",
    "tower-http",
    "server-core",
    "russh",
    "futures",
    "axum_session",
    "axum_session_auth",
    "async-trait",
    "openidconnect",
    "url",
    "vt100",
]

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
axum_session = { workspace = true, optional = true }
axum_session_auth = { workspace = true, optional = true }
base64 = { workspace = true }
chrono.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
dioxus = { workspace = true, features = ["fullstack"] }
futures = { workspace = true, optional = true }
gloo-events = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
openidconnect = { workspace = true, optional = true }
rb-types = { path = "../rb-types" }
reqwest = { workspace = true }
russh = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
server-core = { path = "../server-core", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-web = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, features = ["js"] }
vt100 = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true }
