[package]
name = "server-core"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui.workspace = true
russh.workspace = true
state-store = { path = "../state-store" }
ssh-core = { path = "../ssh-core" }
rb-types = { path = "../rb-types", features = ["sqlx"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
argon2.workspace = true
password-hash.workspace = true
sqlx.workspace = true
rand_core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
chacha20poly1305.workspace = true
base64.workspace = true
secrecy.workspace = true
once_cell.workspace = true
hkdf.workspace = true
sha2.workspace = true
tui-core.workspace = true
futures = "0.3"
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
anyhow.workspace = true
serial_test = "3"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "runtime-tokio",
    "sqlite",
] }
state-store = { path = "../state-store" }
