[package]
name = "server-core"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui.workspace = true
russh.workspace = true
state-store = { path = "../state-store", features = ["server"] }
ssh-core = { path = "../ssh-core" }
rb-types = { path = "../rb-types", features = ["sqlx"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
argon2.workspace = true
password-hash.workspace = true
sqlx.workspace = true
rand_core.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
chacha20poly1305.workspace = true
base64.workspace = true
secrecy.workspace = true
once_cell.workspace = true
hkdf.workspace = true
sha2.workspace = true
tui-core.workspace = true
futures = "0.3"
async-trait.workspace = true
axum_session = "0.17"
axum_session_sqlx = { version = "0.6", features = ["sqlite"] }
openidconnect = { workspace = true, features = ["reqwest"] }
ssh-key.workspace = true
ssh-encoding = "0.2"
reqwest.workspace = true
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }
zstd = "0.13"

[dev-dependencies]
anyhow.workspace = true
serial_test = "3"
sqlx = { version = "0.8.6", features = [
    "chrono",
    "macros",
    "runtime-tokio",
    "sqlite",
] }
state-store = { path = "../state-store" }
