[package]
name = "server-core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
argon2.workspace = true
async-trait.workspace = true
axum_session.workspace = true
axum_session_sqlx.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
futures.workspace = true
hkdf.workspace = true
openidconnect = { workspace = true, features = ["reqwest"] }
password-hash.workspace = true
rand.workspace = true
rand_core.workspace = true
ratatui.workspace = true
rb-types = { path = "../rb-types", features = ["sqlx"] }
reqwest.workspace = true
russh.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
ssh-core = { path = "../ssh-core" }
ssh-encoding.workspace = true
ssh-key.workspace = true
state-store = { path = "../state-store", features = ["server"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tui-core.workspace = true
uuid.workspace = true
zstd.workspace = true

[dev-dependencies]
anyhow.workspace = true
sqlx.workspace = true
state-store = { path = "../state-store", features = ["test-support", "server"] }
