[package]
name = "ssh-core"
version.workspace = true
edition.workspace = true

[features]
forwarding-tests = []

[dependencies]
clap.workspace = true
crossterm.workspace = true
russh.workspace = true
rustix.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
libc.workspace = true
rsa.workspace = true
des.workspace = true
cbc.workspace = true
md5.workspace = true
hex.workspace = true
base64.workspace = true
rb-types = { path = "../rb-types", features = ["clap"] }

[dev-dependencies]
rand.workspace = true
