[package]
name = "ssh-core"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
forwarding-tests = []

[dependencies]
async-trait.workspace = true
base64.workspace = true
cbc.workspace = true
clap.workspace = true
crossterm.workspace = true
des.workspace = true
hex.workspace = true
libc.workspace = true
md5.workspace = true
rb-types = { path = "../rb-types", features = ["clap"] }
rsa.workspace = true
russh.workspace = true
rustix.workspace = true
signal-hook.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
anyhow.workspace = true
rand.workspace = true
