[package]
name = "state-store"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { workspace = true, features = ["fs", "sync"] }
tracing = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
rb-types = { path = "../rb-types", features = ["sqlx"] }
