[package]
name = "state-store"
version.workspace = true
edition.workspace = true

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { workspace = true, features = ["fs", "sync"] }
tracing = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
rb-types = { path = "../rb-types", features = ["sqlx"] }
uuid = { version = "1", features = ["v7", "serde"] }
zstd = "0.13"
chrono = { workspace = true }
serde_json = { workspace = true }
