[package]
name = "state-store"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[features]
default = ["client", "server"]
client = []
server = []
test-support = ["dep:tempfile"]

[dependencies]
chrono = { workspace = true }
dirs = { workspace = true }
rb-types = { path = "../rb-types", features = ["sqlx"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "macros"] }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
tracing = { workspace = true }
url = { workspace = true }
uuid.workspace = true
